--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@ async function createPeerConnection(peerName, dc) {
   var pc = new RTCPeerConnection({
     iceServers: [
       {
-        urls: 'turn:meet.verrdon.com:3478',
+        urls: 'turn:44.243.60.163:3478',
         username: "barfolomew",
         credential: "thatsgoingtoleaveamark"
       },
